@@ -843,6 +843,8 @@
                     <signal name="cursor-changed" handler="on_treeview1_cursor_changed" swapped="no"/>
                     <signal name="button-press-event" handler="on_treeview1_button_press_event" swapped="no"/>
                     <signal name="row-activated" handler="on_treeview1_row_activated" swapped="no"/>
+                    <signal name="row-collapsed" handler="on_treeview1_row_collapsed" swapped="no"/>
+                    <signal name="row-expanded" handler="on_treeview1_row_expanded" swapped="no"/>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="treeview-selection1"/>
                     </child>
